# maslib

./: README.md  pyproject.toml
api/: serializers.py  tests.py  urls.py  views.py
base/: admin.py  models.py  tests.py  urls.py
base/migrations/: 0001_initial.py  0002_alter_show_genres_alter_show_producers_and_more.py  0003_alter_show_genres_alter_show_producers_and_more.py  0004_rename_is_favorite_usershowlist_favorite_and_more.py  0005_alter_usershowlist_unique_together.py  0006_rename_show_id_usershowlist_show_and_more.py  0007_rename_show_usershowlist_show_id_and_more.py  0008_alter_usershowlist_unique_together.py
core/: settings.py  urls.py
templates/base/: index.html
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_rename_username_user_user_name.py  0003_remove_user_start_date.py  0004_user_start_date.py
