[tool.poetry]
name = "maslib"
version = "0.1.0"
description = "Movie and Series Library"
authors = ["LrnzdDC3696 <lrnzdc3696@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
